--- a/app/assets/stylesheets/bootstrap.css.erb
+++ b/app/assets/stylesheets/bootstrap.css.erb
@@ -1278,7 +1278,7 @@ textarea:focus:required:invalid:focus,
   color: #999999;
 }
 ::-webkit-input-placeholder {
-  color: #CCC;
+  color: #C9C9C9;
 }
 .help-block,
 .help-inline {
