--- a/app/assets/stylesheets/doulins.css.scss
+++ b/app/assets/stylesheets/doulins.css.scss
@@ -84,8 +84,10 @@
 		text-align: left;
 		 font-family:"gotham";
 		 line-height:20px;
-		 font-size:25px;
+		 font-size:23px;
 		 color:#000000;
+		 letter-spacing:-1px;
+		line-height: 25px;
 		}
 		
 		
