--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -1,11 +1,12 @@
 #argcom2{
+::-webkit-input-placeholder {
+   font-family: "gotham";
+}
 	min-height: 48px;
 	width: 780px;
 	background-color: #EEE;
 	margin-top:15px;
-	margin-left: 162px;
 	word-wrap:break-word;
-	
 	#imageuser{
 		img { width: 42px; height:35px;}
 		
@@ -16,6 +17,7 @@
 
 	
 	#user{
+	width: 90px;
 	margin-top:-40px;
 	margin-left:60px;
 	font-family:"gotham";
@@ -53,7 +55,10 @@
 }
 
 #comment{
-	min-height: 55px;
+	::-webkit-input-placeholder {
+	   font-family: "gotham";
+	}
+		min-height: 55px;
 	background-color: #EEE;
 	margin-top:5px;
 	margin-left: 248px;
