--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -9,7 +9,7 @@ header {
   background-color: #FFF;
 
   #logo {
-	margin-top:25px;
+	margin-top:37px;
 	margin-left:65px;
 
     }
@@ -153,68 +153,90 @@ header {
 	margin-top:37px;
 	
 	#user-nav {    
-	  margin-left:120px;
+	  margin-left:91px;
 	  background-color: #000000;
       height:26px;
-	  width: 158px;
+	  width: 170px;
 	  font-family: 'gotham';
 	  color: white;
 	  text-align:center;
       line-height: 25px;
 	  font-size: 15px;
+	  margin-bottom: 10px;
+	margin-top:50px;
 	
 	.white{
 	color: white;
 	}
 	
     }
-	#deconnecte{
-	  margin-left:183px;
-	  background-color: #000000;
-	  height:28px;
-	  width: 128px;
-	  text-align:center;
-      line-height: 25px;
 
-	
-		.test{
-			font-family: 'gotham';
-	  		color: white;
-		  	font-size: 12px;		
+	#deconnecte{
+		margin-top: -20px;
+		margin-left:111px;
+		height: 100px;
+		
+		.login{
+		::-webkit-input-placeholder {
+		   font-family: "gotham";
+		   color: black;
 		}
+			.login-field{
+				width: 178px;
+				border-radius: 0px;
+				background-color: white;
+				font-family: "gotham";
+				font-size: 15px;
+				color: black;
+				height: 25px;
+				}
+		}	
 	}
 	
 	#dropdown{
-		margin-left:165px;
-		margin-top: -25px;
+	border-radius: 0px;
+	margin-left: 175px;
+	margin-top: -25px;
 		
 	}
 
 
 	#debat-nav{
 	
-	#facebook-page{
-	background-color:#000000;
-	height:28px;
-	width:28px;
-	margin-top:10px;
-	margin-left: 270px;
-	
-	.image{
-	padding-top:4px;
-	padding-left: 10px;
-	}
-	}
-	
-	#twitter-page{
-	background-color:#000000;
-	height:28px;
-	width:28px;
-	margin-top:-28px;
-	margin-left: 303px;
-	
-	.image{
-	}
+	#RS{
+		width: 200px;
+		margin-left:111px;
+		margin-top:-33px;
+		div{
+		display: inline-block;
+		}
+		
+		.motdepasse{
+		background-color: #FF6969;
+		font-family: "gotham";
+		font-size: 15px;
+		color: white;
+		width: 115px;
+		height: 21px;
+		padding-top:3px;
+		text-align: center;
+		}
+		
+		.submit-login{
+		background-color: #C9C9C9;
+		color: white;
+		font-style: "gotham";
+		font-size: 15px;
+		height: 24px;
+		border-radius: 0px;
+		border: none;
+		margin-top: 5px;
+		}
+		
+		.facebook-page{
+		margin-top: 5px;
+		float: right;
+		}
 	}
 	
 	#apprendre{
@@ -222,7 +244,7 @@ header {
 		width: 200px;
 		background-color:#808080;
 		text-align:center;
-		margin-top:10px;
+		margin-top: 3px;
 		margin-left: 111px;
 		
 		li {
