--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -36,36 +36,55 @@ text-align: center;
 	margin-left:20px;
 	width: 260px;
 	height: 358px;
-	background-color: #FFF;
-	
-		#badge-home{
-		margin-top: 15px;
-		margin-left: - 35px;
-		}
 		
+			
+			.image1{
+
+			margin-left:10px;
+			width: 150px;
+			padding-top:5px;
+			padding-bottom: 10px;
+			margin-right: 10px;
+			border-bottom: 1px Solid white;
+				img { width: 150px; height:150px;}
+			}
+
+			.nom{
+				font-family:"gotham";
+				font-size: 16px;
+				font-color: black;
+				margin-left: 10px;
+				width: 150px;
+				text-align: center;
+				margin-top: 10px;
+				padding-bottom: 10px;
+				border-bottom: 4px Solid white;
+			}
+			
 		#stats-profil{
-			margin-left: 40px;
-			width: 170px;
+			margin-left: 10px;
+			width: 150px;
 			margin-bottom: 5px;
 			margin-top: 5px;
 			font-family: "gotham";
-			font-size: 16px;
+			font-size: 15px;
 			border-bottom: 1px solid black;
+			
+			div{
+			display: inline-block;
+			}
 
 			.texte5{
+				padding-left: 4px;
 				padding-top: 8px;
-				margin-bottom: 3px;
-				width: 50px;
-				height: 22px;
 				text-align: center;
-				color: black;
 				font-family: "bebasneue-webfont";
-				font-size: 27px;
+				font-size: 22px;
+				color: white;
 			}
 
 			.texte2{
-				margin-left: 60px;
-				margin-top: -30px;
+				margin-left: 10px;
 				margin-bottom: 15px;
 			}
 		}
@@ -74,10 +93,10 @@ text-align: center;
 	}
 	
 	#video_3{	
-	width: 565px;
-	height: 358px;
-	margin-top: - 358px;
-	margin-left: 290px;
+	width: 640px;
+	height: 350px;
+	margin-top: - 353px;
+	margin-left: 210px;
     background-color: #FFF;
 	}
 		
