--- a/app/views/challenges/_lincoln_douglas.html.erb
+++ b/app/views/challenges/_lincoln_douglas.html.erb
@@ -16,9 +16,11 @@
 					<div class="image2">
 					<% if @challenge.position_taken.include?(1) %>
 						<%= image_tag @challenge.prime_minister.avatar.url(:medium), class:"image" %>
-					<%else%>
-						<%= image_tag ("default_medium.jpg") %>
-					<%end%>
+						<%elsif current_user && current_user.in_challenge?(@challenge)%>
+							<%= image_tag("place_vide.png") %>
+						<%else%>
+							<%= link_to image_tag("place_vide.png"), join_one_challenge_path(:challenge => @challenge), :method => :post %>
+						<%end%>
 					</div>
 				</div>
 					
@@ -70,34 +72,45 @@
 						
 						<% if @challenge.position_taken.include?(1) %>
 							<% if current_user  && @challenge.has_evaluation?(:vote_challenges, current_user) %>
-								<span class="rapport-gauche"><%= @challenge.rapport%>%</span>
 								<% if @challenge.valeur_vote(current_user) == 1.0 %>
-									<a><%= link_to "#{@challenge.prime_minister.fitting_name}", vote_challenge_challenge_path(@challenge, type: "up"), class: "pour-first1"%></a>
+								<div class= "moitie-gauche1">
+									<span class="rapport-gauche"><%= @challenge.rapport%>%</span>
+									<div class="pour-truc"><a><%= link_to "#{@challenge.prime_minister.fitting_name}", vote_challenge_challenge_path(@challenge, type: "up"), class: "pour-first"%></a></div>
 								<% else %>
-									<a><%= link_to "#{@challenge.prime_minister.fitting_name}", vote_challenge_challenge_path(@challenge, type: "up"), class: "pour-first"%></a>
+									<div class= "moitie-gauche">
+									<span class="rapport-gauche"><%= @challenge.rapport%>%</span>
+									<div class="pour-truc"><a><%= link_to "#{@challenge.prime_minister.fitting_name}", vote_challenge_challenge_path(@challenge, type: "up"), class: "pour-first"%></a></div>
 								<% end %>
 							<% else%>
+								<div class= "moitie-gauche">
 								<div class="pour-truc"><a><%= link_to "Pour #{@challenge.prime_minister.fitting_name}", vote_challenge_challenge_path(@challenge, type: "up"), class: "pour-first"%></a></div>
 							<% end %>
 						<% else %>
-							<a class="pour-first" href="#">POUR LA GAUCHE</a>	
+							<div class= "moitie-gauche">
+							<div class="pour-truc"><a class="pour-first" href="#">Pour la gauche</a></div>	
 						<%end%>
-									
-									
+						</div>
+											
 						<% if @challenge.position_taken.include?(2) %>
 							<% if current_user  && @challenge.has_evaluation?(:vote_challenges, current_user) %>
-									<span class="rapport-droite"><%= @challenge.rapport_inverse %>%</span>
 								<% if @challenge.valeur_vote(current_user) == -1.0 %>
-									<a><%= link_to "#{@challenge.first_opponent.fitting_name}", vote_challenge_challenge_path(@challenge, type: "down"), class: "pour-second2"%></a>
+								<div class="moitie-droite1">
+									<span class="rapport-droite"><%= @challenge.rapport_inverse%>%</span>
+									<div class="pour-truc"><a><%= link_to "#{@challenge.first_opponent.fitting_name}", vote_challenge_challenge_path(@challenge, type: "down"), class: "pour-second"%></a></div>
 								<% else %>
-									<a><%= link_to "#{@challenge.first_opponent.fitting_name}", vote_challenge_challenge_path(@challenge, type: "down"), class: "pour-second"%></a>
+								<div class="moitie-droite">
+									<span class="rapport-droite"><%= @challenge.rapport_inverse%>%</span>
+									<div class="pour-truc"><a><%= link_to "#{@challenge.first_opponent.fitting_name}", vote_challenge_challenge_path(@challenge, type: "down"), class: "pour-second"%></a></div>
 								<% end %>
 							<% else%>
+							<div class="moitie-droite">
 								<div class="pour-truc"><a><%= link_to "Pour #{@challenge.first_opponent.fitting_name}", vote_challenge_challenge_path(@challenge, type: "down"), class: "pour-second"%></a></div>
 							<% end %>
 						<% else %>
-							<a class="pour-second" href="#">POUR LA DROITE</a>	
-						<%end%>								
+						<div class="moitie-droite">
+						<div class="pour-truc">	<a class="pour-second" href="#">Pour la droite</a></div>
+						<%end%>	
+						</div>							
 				</div>
 				
 				<div class="row" id="ld-milieu-5">
@@ -122,9 +135,11 @@
 					<div class="image2">
 					<% if @challenge.position_taken.include?(2) %>
 						<%= image_tag @challenge.first_opponent.avatar.url(:medium), class:"image" %>
-					<%else%>
-						<%= image_tag ("default_medium.jpg") %>
-					<%end%>
+						<%elsif current_user && current_user.in_challenge?(@challenge)%>
+							<%= image_tag("place_vide.png") %>
+						<%else%>
+							<%= link_to image_tag("place_vide.png"), join_two_challenge_path(:challenge => @challenge), :method => :post %>
+						<%end%>
 					</div>
 				</div>
 			
