--- a/app/views/shared/_argument_neutre_badge.html.erb
+++ b/app/views/shared/_argument_neutre_badge.html.erb
@@ -69,7 +69,7 @@
 
 	    </div>
      <div class="argcoms">        
-        <div class="row">
+        <div class="row" id="argcom-neutre">
 	        <div class="span8">
 		    		<% argument.argcoms.each do |argcom| %>
     	    		 <%= render "shared/argcom_badge", :argcom => argcom %>
